--- a/README
+++ b/README
@@ -2,7 +2,7 @@ See the "User's Manual" for info on "Getting Started" in ParFlow.
 
 Note this version of Parflow uses a new configure/make system based on
 the standard GNU autoconf configure system.  This replaces the home
-cooked set of scripts used in previous versions and should be more
+grown set of scripts used in previous versions and should be more
 portable.
 
 Since Parflow is composed of several different parts which might
