Update documents to autoconf Makefiles
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow/branches/smith84@126 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/README
+++ b/README
@@ -84,6 +84,7 @@ cd pftools
 ./configure --prefix=$PARFLOW_DIR --with-amps=mpi1
 make 
 make install
+make doc_install
 
 Note that pftools is NOT parallel but some options for how files are
 written are based on the communication layer so pftools needs to know
