Added support for CLM tests that are optional
git-svn-id: https://parflow.svn.cloudforge.com/parflow/parflow/branches/smithsg@210 39af3fb0-ca4e-0410-adf9-b4ae76d04516

--- a/TODO
+++ b/TODO
@@ -4,3 +4,7 @@ There were some compile problems with the CLM F90 and gfortran,
 flagged with "SGS" in the CLM directory.  All had to do with file
 open/write statements. A couple of the write statements were simply
 commented out to get things to compile.
+
+SGS
+
+The CLM test is currently broken as it is just a copy of default_richards.
