--- a/models.tex
+++ b/models.tex
@@ -8,10 +8,10 @@
 In this chapter, we discuss the model equations used by \parflow{} for both its
 multiphase flow and transport model and the variably saturated flow model.
 In section \ref{Multi-Phase Flow Equations} we describe the multi-phase
-flow equations, and in section \ref{Transport Equations} we describe
-the transport equations.  Lastly, section \ref{Richards' Equation} 
-describes the Richards' equation model for variably saturated flow as 
-implemented in \parflow{}.  
+flow equations (specified by solver {\bf IMPES}), and in section \ref{Transport Equations} we describe
+the transport equations.  Next we describe how the multiphase flow equations may be reduced to solve for steady-state, saturated groundwater flow.  Then, section \ref{Richards' Equation} 
+describes the Richards' equation model (specified by solver {\bf RICHARDS}) for variably saturated flow as 
+implemented in \parflow{}.  Lastly, the overland flow equations are presented.
 
 \section{Multi-Phase Flow Equations}
 \label{Multi-Phase Flow Equations}
@@ -279,6 +279,19 @@ g (I)      & = & 1 .
 By doing this, $\Xk (I)$ represents hydraulic conductivity of the base
 phase $\XK_0$ (e.g. water) under saturated conditions (i.e. $k_{r0} = 1$).
 
+\section{Steady-State, Saturated Groundwater Flow}
+\label{Steady-State, Saturated Groundwater Flow}
+Many groundwater problems are solved assuming steady-state, fully-saturated groundwater flow.  This follows the form often written as:
+\begin{eqnarray}
+\dvop \textbf{q} = Q(x)
+\label{eq:ssgw}
+\end{eqnarray}
+where $Q$ is the spatially-variable source-sink term (to represent wells, etc) and $\textbf{q}$ is the Darcy flux $[L^{2}T^{-1}]$ which is commonly written as:
+\begin{eqnarray}
+\textbf{q}=- \textbf{K} \Xgrad H
+\label{eq:Darcy}
+\end{eqnarray}
+where $\textbf{K}$ is the saturated, hydraulic conductivity tensor $[LT^{-1}]$ and $H$ $[L]$ is the head-potential.  Inspection of \ref{eqn-mass-balance} and \ref{eqn-darcy} show that these equations agree with the above formulation for a single-phase ($i=1$), fully-satured ($S_i=S=1$), problem where the mobility, $\Xmobi$, is set to the saturated hydraulic conductivity, $\textbf{K}$, above.  This is accomplished by setting the relative permeability and viscosity terms to unity in \ref{eqn-phase-mobility} as well as the gravity and density terms in \ref{eqn-darcy}.  This is shown in the example in \S~\ref{Tutorial}, but please note that the resulting solution is in pressure-head, $h$, not head potential, $H$, and will still contain a hydrostatic pressure gradient in the $z$ direction.
 
 \section{Richards' Equation}
 \label{Richards' Equation}
